prod/frontend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: boliwar/frontend:1.0.0
        name: frontend
        ports:
          - containerPort: 80
        resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
        volumeMounts:
          - mountPath: /static
            name: static
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: static
